[package]
name = "gachix"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = "0.20"
clap = { version = "4.5.48", features = ["derive"] }
nix-base32 = "0.2.0"
sha2 = "0.10.9"
actix-web = "4.11.0"
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-subscriber = "0.3.20"
anyhow = "1.0.100"
liblzma = "0.4.5"
regex = "1.12.2"
futures = "0.3.31"
tokio = {version = "1.48.0", features = ["full"]}
bytes = "1.10.1"
nix-daemon = "0.1.1"
async-ssh2-lite = {version = "0.5.0", features = ["tokio"]}
dirs = "6.0.0"
whoami = "1.6.1"
nix-nar = "0.3.0"
lazy_static = "1.5.0"

[dev-dependencies]
nix-nar = "0.3.0"
tempfile = "3.23.0"
rand = { version = "0.8", features = ["alloc"] }
assert_cmd = "2.1.1"
reqwest = { version = "0.12.24", features = ["blocking"] }
